--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -385,7 +385,7 @@ TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Layout.Slot.Obj
 Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Texture2D="\"Object\" "
 Texture="\"Object\" "
-StreamableRenderAsset="\"Object\" "
+StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 ExpandableArea="\"Object\" "
 VerticalBox="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Overlay="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
@@ -573,14 +573,21 @@ LandscapeGizmoRenderComponent="\"Object\" "
 FoliageType_Actor="\"Object\" "
 MaterialExpressionVertexColor="\"Object\" "
 MaterialExpressionConstant2Vector="\"Object\" "
+MaterialExpressionSceneColor="\"Object\" "
+MaterialExpressionParticleColor="\"Object\" "
+MaterialExpressionNoise="\"Object\" "
+MaterialExpressionReroute="\"Object\" "
+MaterialExpressionRerouteBase="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Cats/Assets/Materials/grass_Mat.grass_Mat
 OpenAssetsAtExit=/Game/Cats/Assets/Props/tree.tree
 OpenAssetsAtExit=/Game/Cats/Assets/Props/colormap.colormap
-OpenAssetsAtExit=/Game/Cats/Assets/Props/Grass_foliage.Grass_foliage
-OpenAssetsAtExit=/Game/Cats/Assets/Props/NewInstancedStaticMeshFoliage.NewInstancedStaticMeshFoliage
+OpenAssetsAtExit=/Game/Cats/Assets/Props/Buisson_FoliageType.Buisson_FoliageType
+OpenAssetsAtExit=/Game/Cats/Assets/Props/TreeFoliage.TreeFoliage
+OpenAssetsAtExit=/Game/Cats/Assets/Materials/Water.Water
+OpenAssetsAtExit=/Engine/EngineMaterials/WorldGridMaterial.WorldGridMaterial
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1698,8 +1705,8 @@ K2Node_VariableSet=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics
 Cat_C=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections
 Mouse_C=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections
 K2Node_CustomEvent=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SplineComponent.Selected Points.SplinePointDetails,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections
-NavMeshBoundsVolume=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections
-BrushComponent=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections
+NavMeshBoundsVolume=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections
+BrushComponent=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections
 RecastNavMesh=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options
 MouseArea_C=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections
 SplineComponent=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections
@@ -1875,6 +1882,8 @@ CharacterMovementComponent=CapsuleComponent.Collision.Collision,CapsuleComponent
 girl_ABP_C=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections
 InstancedFoliageActor=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections
 LandscapeStreamingProxy=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections
+LandscapeGizmoActiveActor=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections
+LandscapeGizmoRenderComponent=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -3688,6 +3697,12 @@ MaterialExpressionVertexColor.MaterialExpression=True
 MaterialExpressionConstant2Vector.MaterialExpressionConstant2Vector=True
 MaterialExpressionConstant2Vector.MaterialExpression=True
 Texture2D.Interchange =True
+MaterialExpressionSceneColor.MaterialExpressionSceneColor=True
+MaterialExpressionSceneColor.MaterialExpression=True
+MaterialExpressionParticleColor.MaterialExpression=True
+MaterialExpressionNoise.MaterialExpressionNoise=True
+MaterialExpressionNoise.MaterialExpression=True
+MaterialExpressionReroute.MaterialExpression=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -3802,29 +3817,29 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Cats/Assets/Materials/grass
-MRUItem1=/Game/Cats/Assets/Materials/Water
-MRUItem2=/Game/Cats/Assets/Props/NewInstancedStaticMeshFoliage
-MRUItem3=/Game/Cats/Assets/Props/Grass_foliage
-MRUItem4=/Game/Cats/Assets/Props/colormap
-MRUItem5=/Game/Cats/Assets/Props/tree
-MRUItem6=/Game/Cats/Assets/Props/TreeFoliage
-MRUItem7=/Game/Cats/Assets/Materials/grass_Mat
-MRUItem8=/Game/Cats/Map/ThirdPersonMap
-MRUItem9=/Game/Cats/Map/Parc
-MRUItem10=/Game/Cats/Blueprint/Mouse
-MRUItem11=/Game/Cats/Assets/Souris/Mouse_with_anim_Fix
-MRUItem12=/Game/Cats/Assets/Souris/Mouse_with_anim_Fix_Anim
-MRUItem13=/Game/Cats/Assets/Souris/Mouse_with_anim_Fix_Skeleton
-MRUItem14=/Game/Cats/Assets/PNJ/Animation/girl_idle
-MRUItem15=/Game/Cats/Assets/PNJ/Animation/oldman_walk
-MRUItem16=/Game/Cats/Assets/PNJ/Animation/girl_ABP
-MRUItem17=/Game/Cats/Blueprint/Children
-MRUItem18=/Game/Cats/Assets/PNJ/Animation/girl_walk
-MRUItem19=/Game/Cats/Assets/PNJ/Animation/Animation_Walk
+MRUItem0=/Game/Cats/Assets/Props/TreeFoliage
+MRUItem1=/Game/Cats/Assets/Props/Buisson_FoliageType
+MRUItem2=/Engine/EngineMaterials/WorldGridMaterial
+MRUItem3=/Game/Cats/Assets/Props/Buisson
+MRUItem4=/Game/Cats/Assets/Materials/grass
+MRUItem5=/Game/Cats/Assets/Materials/Water
+MRUItem6=/Game/Cats/Assets/Props/NewInstancedStaticMeshFoliage
+MRUItem7=/Game/Cats/Assets/Props/Grass_foliage
+MRUItem8=/Game/Cats/Assets/Props/colormap
+MRUItem9=/Game/Cats/Assets/Props/tree
+MRUItem10=/Game/Cats/Assets/Materials/grass_Mat
+MRUItem11=/Game/Cats/Map/ThirdPersonMap
+MRUItem12=/Game/Cats/Map/Parc
+MRUItem13=/Game/Cats/Blueprint/Mouse
+MRUItem14=/Game/Cats/Assets/Souris/Mouse_with_anim_Fix
+MRUItem15=/Game/Cats/Assets/Souris/Mouse_with_anim_Fix_Anim
+MRUItem16=/Game/Cats/Assets/Souris/Mouse_with_anim_Fix_Skeleton
+MRUItem17=/Game/Cats/Assets/PNJ/Animation/girl_idle
+MRUItem18=/Game/Cats/Assets/PNJ/Animation/oldman_walk
+MRUItem19=/Game/Cats/Assets/PNJ/Animation/girl_ABP
 
 [MaterialEditor]
 PrimType=1
@@ -4089,6 +4104,8 @@ bMaterialQualityUsed[3]=0
 /Game/Cats/Assets/PNJ/Animation/girl_ABP.girl_ABP=0
 /Game/Cats/Assets/PNJ/Animation/oldman_walk.oldman_walk=0
 /Game/Cats/Assets/Materials/grass.grass=1
+/Game/Cats/Assets/Props/NewInstancedStaticMeshFoliage.NewInstancedStaticMeshFoliage=1
+/Game/Cats/Assets/Props/Grass_foliage.Grass_foliage=1
 
 [SelectionDetails]
 PreserveScaleRatio=True
@@ -4139,6 +4156,11 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [PlacementMode]
+RecentlyPlaced=/Game/Cats/Assets/Props/Buisson.Buisson;
+RecentlyPlaced=/Game/Cats/Assets/Props/flower_pot.flower_pot;
+RecentlyPlaced=/Game/Cats/Assets/Props/trashcan.trashcan;
+RecentlyPlaced=/Game/Cats/Assets/Props/bench.bench;
+RecentlyPlaced=/Game/Cats/Assets/Materials/Water.Water;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Cats/Assets/PNJ/Animation/Animation_IDLE.Animation_IDLE;
 RecentlyPlaced=/Game/Cats/Assets/PNJ/Animation/Animation_Walk.Animation_Walk;
@@ -4152,13 +4174,8 @@ RecentlyPlaced=/Game/Cats/Assets/Cat/Custom/Cat_Mat_Inst1.Cat_Mat_Inst1;
 RecentlyPlaced=/Game/Cats/Assets/Cat/Custom/Skeletton_Cat_00.Skeletton_Cat_00;
 RecentlyPlaced=/Game/Cats/Blueprint/MissionArea.MissionArea;
 RecentlyPlaced=/Game/Cats/Assets/Props/bottle_green.bottle_green;
-RecentlyPlaced=/Game/Cats/Assets/Props/trashcan.trashcan;
 RecentlyPlaced=/Game/Cats/Blueprint/PaperBall.PaperBall;
 RecentlyPlaced=/Game/Cats/Blueprint/Bucket.Bucket;
-RecentlyPlaced=/Game/Cats/Blueprint/Box.Box;
-RecentlyPlaced=/Game/Cats/Blueprint/Bottle.Bottle;
-RecentlyPlaced=/Game/Cats/Blueprint/BoxOpen.BoxOpen;
-RecentlyPlaced=/Game/Cats/Blueprint/Balls.Balls;
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -4272,6 +4289,7 @@ StaticMeshActor.Materials=False
 StaticMeshActor.Collision=True
 AnimSequence.Animation=True
 AnimSequence.ImportSettings=True
+FoliageType_InstancedStaticMesh.VirtualTexture=True
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoSaveMaxBackups=10
@@ -4451,7 +4469,7 @@ bShowPaletteItemDetails=True
 bShowPaletteItemTooltips=True
 ActivePaletteViewMode=0
 PaletteThumbnailScale=0.300000012
-IsInSingleInstantiationMode=False
+IsInSingleInstantiationMode=True
 IsInSpawnInCurrentLevelMode=False
 SingleInstantiationPlacementMode=0
 Radius=329.937012
@@ -4462,8 +4480,9 @@ bDrawGrid=False
 PrimType=1
 
 [LandscapeEdit]
-ToolStrength=0.0839999989
-BrushRadius=857.26947
+ToolStrength=0.388000011
+BrushRadius=372.455139
+BrushFalloff=0.148000002
 PaintToolStrength=0.428000003
 PaintBrushRadius=396.497131
 PaintBrushFalloff=0.115999997
