--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -546,7 +546,7 @@ PhysicsVolume="\"Object\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSetting
 EditableTextBox="\"Object\" \"Object.Appearance.WidgetStyle.TextStyle\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -562,7 +562,7 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/Cats/Map/ThirdPersonMap.ThirdPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=643.000 Y=1.000
+ScreenPosition=X=2005.000 Y=58.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -1629,6 +1629,7 @@ MaterialEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
+RecentsFiles=C:/Program Files/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/Jeux/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
