--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -77,3 +77,6 @@ ManualIPAddress=
 [/Script/AIModule.AISystem]
 bForgetStaleActors=True
 
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=Dynamic
+
