fix : NPC animation + clean blueprint folder

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -157,7 +157,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Cats/Widget
-ContentBrowserTab1.SelectedPaths=/Game/Cats/Map
+ContentBrowserTab1.SelectedPaths=/Game/Cats/Blueprint
 None=======
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
@@ -211,12 +211,12 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Cats/Map/ThirdPersonMap
+LastLevel=/Game/Cats/Map/StartingScreen
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
 WorldPartitionRuntimeHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
-Object="\"Object\" \"Object.InstanceSettings.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.InstanceSettings.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+Object="\"Object\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -320,9 +320,9 @@ FbxImportUI="\"Object\" "
 PreviewMaterial="\"Object\" "
 Material="\"Object\" "
 MaterialInterface="\"Object\" "
-SkeletalMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SkinnedMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-MeshComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SkeletalMeshComponent="\"Object\" "
+SkinnedMeshComponent="\"Object\" "
+MeshComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
@@ -374,7 +374,7 @@ TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transfor
 Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Texture2D="\"Object\" "
 Texture="\"Object\" "
-StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
+StreamableRenderAsset="\"Object\" "
 ExpandableArea="\"Object\" "
 VerticalBox="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Overlay="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
@@ -398,7 +398,7 @@ AnimInstance="\"Object\" "
 ArrowComponent="\"Object\" "
 BillboardComponent="\"Object\" "
 Adults_C="\"Object\" \"Object.Actor.Tags\" "
-Adults_C="\"Object\" "
+Adults_C="\"Object\" \"Object.Actor.Tags\" "
 BaseEntity_C="\"Object\" \"Object.Actor.Tags\" "
 BaseEntity_C="\"Object\" \"Object.Actor.Tags\" "
 Pawn="\"Object\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Actor.Tags\" "
@@ -417,7 +417,7 @@ BlendSpace1D="\"Object\" "
 BlendSpace="\"Object\" "
 AnimationAsset="\"Object\" "
 Cat_C="\"Object\" "
-Character="\"Object\" "
+Character="\"Object\" \"Object.Actor.Tags\" "
 Mouse_C="\"Object\" \"Object.Actor.Tags\" "
 SplineComponent="\"Object\" "
 MouseArea_C="\"Object\" \"Object.Default.ListeMouse\" \"Object.Default.Polygon.Polygon[3]\" "
@@ -577,9 +577,14 @@ NavRelevantComponent="\"Object\" "
 QuestDogChase_C="\"Object\" "
 WorldSettings="\"Object\" \"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Audio.DefaultReverbSettings\" "
 Info="\"Object\" \"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Audio.DefaultReverbSettings\" "
+NPC_LittleGirl_C="\"Object\" \"Object.Actor.Tags\" "
+BaseNPC_C="\"Object\" \"Object.Actor.Tags\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Cats/Assets/PNJ/Animation/OldMan_ABP.OldMan_ABP
+OpenAssetsAtExit=/Game/Cats/Assets/PNJ/Animation/girl_ABP.girl_ABP
+OpenAssetsAtExit=/Game/Cats/Blueprint/NPC_LittleGirl.NPC_LittleGirl
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1897,7 +1902,7 @@ FlowerPot_C=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.Constr
 RunEndMenu_C=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections
 CatSaveGame_C=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections
 MyGameMode_C=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections
-OldMan_ABP_C=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections
+OldMan_ABP_C=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections,PostProcessVolume.Lens.Lens,K2Node_FunctionEntry.Inputs.9B801AA847C2ED81AA37ADB66B6AC0FF,K2Node_VariableGet.DefaultValueCategory.Object Types
 CharacterMovementComponent=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections
 girl_ABP_C=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections
 InstancedFoliageActor=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections,PostProcessVolume.Lens.Lens,K2Node_FunctionEntry.Inputs.9B801AA847C2ED81AA37ADB66B6AC0FF,K2Node_VariableGet.DefaultValueCategory.Object Types,GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options
@@ -1918,6 +1923,7 @@ DogsChasing_C=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.Cons
 QuestDogChase_C=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SkeletalMeshComponent.Materials.MaterialList,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections,PostProcessVolume.Lens.Lens,K2Node_FunctionEntry.Inputs.9B801AA847C2ED81AA37ADB66B6AC0FF,K2Node_VariableGet.DefaultValueCategory.Object Types,GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options
 FoliageInstancedStaticMeshComponent=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,Cat_C.TransformCommon.Transform,Cat_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,SplineComponent.Selected Points.SplinePointDetails,StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,PropertyWrapper.DefaultValueCategory.CapsuleHeightAdjust,PropertyWrapper.DefaultValueCategory.ListeMouse,PostProcessVolume.Reflections.Reflections,PostProcessVolume.Lens.Lens,K2Node_FunctionEntry.Inputs.9B801AA847C2ED81AA37ADB66B6AC0FF,K2Node_VariableGet.DefaultValueCategory.Object Types,GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options
 StartingScreen_C=
+NPC_LittleGirl_C=SkeletalMeshComponent.Physics.ConstraintsGroup
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -3954,6 +3960,62 @@ NavModifierComponent.Cooking=True
 QuestDogChase_C.Tick=True
 QuestDogChase_C.Events=True
 WorldSettings.AI=True
+OldMan_ABP_C.Default=True
+girl_ABP_C.Default=True
+NPC_LittleGirl_C.TransformCommon=True
+NPC_LittleGirl_C.Animation=True
+NPC_LittleGirl_C.Mesh=True
+NPC_LittleGirl_C.Tick=True
+NPC_LittleGirl_C.Default=True
+NPC_LittleGirl_C.ComponentTick=True
+NPC_LittleGirl_C.Clothing=True
+NPC_LittleGirl_C.Physics=True
+NPC_LittleGirl_C.Collision=True
+NPC_LittleGirl_C.LeaderPoseComponent=True
+NPC_LittleGirl_C.Lighting=True
+NPC_LittleGirl_C.AnimationRig=True
+NPC_LittleGirl_C.Deformer=True
+NPC_LittleGirl_C.SkinWeights=True
+NPC_LittleGirl_C.Rendering=True
+NPC_LittleGirl_C.HLOD=True
+NPC_LittleGirl_C.PathTracing=True
+NPC_LittleGirl_C.Mobile=True
+NPC_LittleGirl_C.Navigation=True
+NPC_LittleGirl_C.RayTracing=True
+NPC_LittleGirl_C.VirtualTexture=True
+NPC_LittleGirl_C.Tags=True
+NPC_LittleGirl_C.AssetUserData=True
+NPC_LittleGirl_C.Replication=True
+NPC_LittleGirl_C.ComponentReplication=True
+NPC_LittleGirl_C.Activation=True
+NPC_LittleGirl_C.Variable=True
+NPC_LittleGirl_C.Cooking=True
+NPC_LittleGirl_C.Character Movement (General Settings)=True
+NPC_LittleGirl_C.Character Movement: Walking=True
+NPC_LittleGirl_C.Character Movement: Jumping / Falling=True
+NPC_LittleGirl_C.Character Movement (Networking)=True
+NPC_LittleGirl_C.Character Movement: Swimming=True
+NPC_LittleGirl_C.Character Movement: Flying=True
+NPC_LittleGirl_C.Character Movement: Custom Movement=True
+NPC_LittleGirl_C.Character Movement (Rotation Settings)=True
+NPC_LittleGirl_C.Character Movement: Physics Interaction=True
+NPC_LittleGirl_C.Character Movement=True
+NPC_LittleGirl_C.Character Movement: Avoidance=True
+NPC_LittleGirl_C.RootMotion=True
+NPC_LittleGirl_C.Character Movement: NavMesh Movement=True
+NPC_LittleGirl_C.NavMovement=True
+NPC_LittleGirl_C.Velocity=True
+NPC_LittleGirl_C.PlanarMovement=True
+NPC_LittleGirl_C.MovementComponent=True
+NPC_LittleGirl_C.Shape=True
+NPC_LittleGirl_C.Character=True
+NPC_LittleGirl_C.Camera=True
+NPC_LittleGirl_C.Pawn=True
+NPC_LittleGirl_C.Actor=True
+NPC_LittleGirl_C.Input=True
+NPC_LittleGirl_C.WorldPartition=True
+NPC_LittleGirl_C.Events=True
+NPC_LittleGirl_C.Materials=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -4068,29 +4130,29 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Cats/Assets/Props/colormap
-MRUItem1=/Game/Cats/Assets/Props/Buisson
-MRUItem2=/Game/Cats/Map/ThirdPersonMap
-MRUItem3=/Game/Cats/Map/Parc
-MRUItem4=/Game/Cats/Widget/MainMenu
-MRUItem5=/Game/Cats/Blueprint/Component/BP_FollowSplineComponent
-MRUItem6=/Game/Cats/Blueprint/StaryCat
-MRUItem7=/Game/Cats/Blueprint/Cat
-MRUItem8=/Game/Cats/Blueprint/BP_TargetSpline
-MRUItem9=/Game/Cats/Blueprint/DogsChasing
-MRUItem10=/Game/Cats/Blueprint/QuestDogChase
-MRUItem11=/Game/Cats/Blueprint/ABP_Human
-MRUItem12=/Game/Cats/Blueprint/BaseEntity
-MRUItem13=/Game/Cats/Blueprint/Jongleur
-MRUItem14=/Game/Cats/Blueprint/MouseArea
-MRUItem15=/Game/Cats/Blueprint/DogChase
-MRUItem16=/Game/Cats/Blueprint/BaseProps
-MRUItem17=/Game/Cats/Blueprint/Box
-MRUItem18=/Game/Cats/Blueprint/Structure/SCT_Run
-MRUItem19=/Game/Cats/Blueprint/cube
+MRUItem0=/Game/Cats/Blueprint/NPC_LittleGirl
+MRUItem1=/Game/Cats/Assets/PNJ/Animation/girl_ABP
+MRUItem2=/Game/Cats/Assets/PNJ/Animation/OldMan_ABP
+MRUItem3=/Game/Cats/Blueprint/Adults
+MRUItem4=/Game/Cats/Blueprint/BP_Parent
+MRUItem5=/Game/Cats/Assets/Props/colormap_ncl1_1
+MRUItem6=/Game/Cats/Assets/Props/colormap
+MRUItem7=/Game/Cats/Assets/Props/Buisson
+MRUItem8=/Game/Cats/Map/ThirdPersonMap
+MRUItem9=/Game/Cats/Map/Parc
+MRUItem10=/Game/Cats/Widget/MainMenu
+MRUItem11=/Game/Cats/Blueprint/Component/BP_FollowSplineComponent
+MRUItem12=/Game/Cats/Blueprint/StaryCat
+MRUItem13=/Game/Cats/Blueprint/Cat
+MRUItem14=/Game/Cats/Blueprint/BP_TargetSpline
+MRUItem15=/Game/Cats/Blueprint/DogsChasing
+MRUItem16=/Game/Cats/Blueprint/QuestDogChase
+MRUItem17=/Game/Cats/Blueprint/ABP_Human
+MRUItem18=/Game/Cats/Blueprint/BaseEntity
+MRUItem19=/Game/Cats/Blueprint/Jongleur
 
 [MaterialEditor]
 PrimType=1
@@ -4389,6 +4451,9 @@ None=======
 /Game/Cats/Blueprint/QuestDogChase.QuestDogChase=0
 /Game/Cats/Assets/Props/colormap.colormap=0
 /Game/Cats/Assets/Props/Buisson.Buisson=0
+/Game/Cats/Assets/Props/colormap_ncl1_1.colormap_ncl1_1=1
+/Game/Cats/Blueprint/BP_Parent.BP_Parent=1
+/Game/Cats/Blueprint/NPC_LittleGirl.NPC_LittleGirl=1
 
 [SelectionDetails]
 PreserveScaleRatio=True
